--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@iconify-json/tabler": "^1.1.96",
+    "@unocss/reset": "^0.57.3",
     "@vitejs/plugin-vue": "^4.4.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
+    "unocss": "^0.57.3",
     "vite": "^4.4.11"
   }
 }
